[package]
name = "rustmiser"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tokio-native-tls = "0.3"
url = "2"
serde_json = "1"
futures-util = "0.3" # for SinkExt and StreamExt
dotenv = "0.15.0"
reqwest = "0.12.20"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = {version = "0.6.2", features = ["fs"]}
tokio-cron = "0.1.3"
once_cell = "1.21.3"
tower = "0.5.2"
rustls = "0.23.31"
mysql = "26.0.1"


